# Gungutils

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  balloonguy.glb  compile_shaders.sh  crate.glb  cross_compile_for_windows.sh  dragon5precent.glb  gungutils.cpp  gungutils.h  gungutils.hpp  helper.glb  main.cpp  picturetest.glb  skybox.glb  speaker.glb  speaker.mtl  suzanne.glb  test.gltf  test2.glb  test3.glb  test4.glb  test5.glb  world.blend  world.blend1  world.glb
fmodproject/.cache/: {48e8cf0e-ba21-419b-869b-75cdbe82ae7d}.pdc  {d5b3a24f-0f26-4533-9e67-eefde8319d8b}.pdc  {de280a1d-6d26-41e2-8fb3-d170ce0434c5}.pdc
fmodproject/.cache/buildrecords/Desktop/: Master.br
fmodproject/.cache/fsbcache/: Desktopsf.fsb
fmodproject/.cache/fsbcache/Desktop/: 04DC0B7B.fobj  7061F4CA.fobj  89A3006F.fobj  DB554C16.fobj
fmodproject/.unsaved/.user/Metadata/: Mixer.user.xml  Workspace.user.xml
fmodproject/.user/Metadata/: Workspace.user.xml
fmodproject/Metadata/: Master.xml  Mixer.xml  Tags.xml  Workspace.xml
fmodproject/Metadata/Asset/: {65a2f846-9683-46f0-ac38-2b684760ad97}.xml
fmodproject/Metadata/AudioFile/: {48e8cf0e-ba21-419b-869b-75cdbe82ae7d}.xml  {d5b3a24f-0f26-4533-9e67-eefde8319d8b}.xml  {de280a1d-6d26-41e2-8fb3-d170ce0434c5}.xml
fmodproject/Metadata/Bank/: {946985f8-ed73-43c0-a983-6c7fdaceb2e7}.xml
fmodproject/Metadata/BankFolder/: {4fcb6d19-f8e9-4da5-953b-9aca465d25a1}.xml
fmodproject/Metadata/EffectPresetFolder/: {3ad5b00f-fe17-4ee1-b136-47471a814188}.xml
fmodproject/Metadata/EncodingSetting/: {221445e3-283b-4976-a294-31de882dcf9f}.xml
fmodproject/Metadata/Event/: {c39cfebe-f33c-4f84-81ca-e2b6fa6d40da}.xml  {fee16b2b-02c9-470d-a2d2-78dec695f476}.xml
fmodproject/Metadata/EventFolder/: {996c5e5a-b0f6-47ec-a63a-dcd5ba713f87}.xml
fmodproject/Metadata/ParameterPresetFolder/: {7f22fd22-c947-4ec9-88f7-4efe9b565847}.xml
fmodproject/Metadata/Platform/: {a89756d5-26c9-4d0b-9e74-cfc6b30a8661}.xml
fmodproject/Metadata/ProfilerFolder/: {1ebc1b0a-1160-481f-a7c1-a2457b52d9ed}.xml
fmodproject/Metadata/Return/: {107314f5-f65e-4418-94df-388a4a1c284e}.xml
fmodproject/Metadata/SandboxFolder/: {8bdfc189-d24e-4d71-ab10-4bea6a07a1a6}.xml
fmodproject/Metadata/SnapshotGroup/: {1f86cf1d-eb9b-4ed2-8dc2-cb7e0c29ec4e}.xml
include/FModStudio/: tree.txt
include/FModStudio/api/core/lib/arm/: libfmod.so.14.8  libfmodL.so.14.8
include/FModStudio/api/core/lib/arm64/: libfmod.so.14.8  libfmodL.so.14.8
include/FModStudio/api/core/lib/x64/: fmod.def
include/FModStudio/api/core/lib/x86/: libfmod.so.14.8  libfmodL.so.14.8
include/FModStudio/api/core/lib/x86_64/: libfmod.so.14.8  libfmodL.so.14  libfmodL.so.14.8
include/FModStudio/api/fsbank/lib/x86/: libfsbank.so.14  libfsbank.so.14.8  libfsbank.so.14.9  libfsbankL.so.14  libfsbankL.so.14.8  libfsbankL.so.14.9
include/FModStudio/api/fsbank/lib/x86_64/: libfsbank.so.14.8  libfsbank.so.14.9  libfsbankL.so.14.8  libfsbankL.so.14.9
include/FModStudio/api/studio/lib/arm/: libfmodstudio.so.14.8  libfmodstudio.so.14.9  libfmodstudioL.so.14.8  libfmodstudioL.so.14.9
include/FModStudio/api/studio/lib/arm64/: libfmodstudio.so.14.8  libfmodstudio.so.14.9  libfmodstudioL.so.14.8  libfmodstudioL.so.14.9
include/FModStudio/api/studio/lib/x64/: fmodstudio.def
include/FModStudio/api/studio/lib/x86/: libfmodstudio.so.14.8  libfmodstudio.so.14.9  libfmodstudioL.so.14.8  libfmodstudioL.so.14.9
include/FModStudio/api/studio/lib/x86_64/: libfmodstudio.so.14.8  libfmodstudioL.so.14.8
include/FModStudio/doc/: revision.txt
include/FModStudio/doc/FMOD API User Manual/: advanced-core-api-topics.html  core-api-channel.html  core-api-channelcontrol.html  core-api-channelgroup.html  core-api-common-dsp-effects.html  core-api-common.html  core-api-concepts.html  core-api-dsp.html  core-api-dspconnection.html  core-api-geometry.html  core-api-platform-android.html  core-api-platform-html5.html  core-api-platform-ios.html  core-api-reverb3d.html  core-api-sound.html  core-api-soundgroup.html  core-api-system.html  core-api.html  dsp-plugin-api-guide.html  effects-reference.html  fsbank-api.html  glossary.html  loading-and-playing-sounds-in-the-core-api.html  managing-resources-in-the-core-api.html  mixing-and-routing-in-the-core-api.html  platforms-android.html  platforms-html5.html  platforms-ios.html  platforms-linux.html  platforms-mac.html  platforms-openharmony.html  platforms-uwp.html  platforms-win.html  platforms.html  plugin-api-codec.html  plugin-api-dsp.html  plugin-api-output.html  plugin-api.html  running-the-core-api.html  spatializing-sounds-in-the-core-api.html  (+22 more)
include/HandmadeMath/update/: update_hmm.py
maps/: map1.gmap  omgtextures.gmap  world.gmap
shaders/: mainshader.glsl  mainshader.glsl.h  postprocess.glsl  postprocess.glsl.h
src/physics/: PhysicsHolder.h
src/rendering/: Light.h  Loading.cpp  Loading.h  Material.h  Mesh.h  Object.h  Post Processing.h  VisGroup.h
src/utils/: CharacterController.h  FPSController.h
